@@ -2,16 +2,16 @@
 
 <beans>
     <bean id="manager" class="edu.mcw.rgd.gff3.Manager">
-        <property name="version" value="--Gff3 generation pipeline -- build Jul 31, 2023 --" />
+        <property name="version" value="--Gff3 generation pipeline -- build Aug 3, 2023 --" />
 
         <property name="assemblies"><!-- file system location for files for given assembly: must be the same as found in '/ref/fasta' directory -->
             <map>
                 <entry key="372" value="data/jbrowse2/Rat/rn7.2" />
-
-                <!--
                 <entry key="360" value="data/jbrowse2/Rat/rn6" />
                 <entry key= "70" value="data/jbrowse2/Rat/rn5" />
                 <entry key= "60" value="data/jbrowse2/Rat/rn3.4" />
+
+                <!--
 
                 <entry key="239" value="data/jbrowse2/Mouse/mm39" />
                 <entry key= "35" value="data/jbrowse2/Mouse/mm38" />
