@@ -1,3 +1,6 @@
+Aug 3, 2023
+  jbrowse2: reenabled generation of data for rn6, rn5 and rn3.4 assemblies
+
 Jul 31, 2023
   jbrowse2: added generation of '#sequence-region' lines for genes, qtls, sslps, protein domains and ontologies
 
